fix: remove scrollbars on paragraphs

--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -93,7 +93,6 @@ a {
 }
 
 p {
-  overflow: auto;
   color: var(--sn-stylekit-paragraph-text-color);
   margin: 0;
 }
